# strands_agents

./: README.md
agents/: .gitignore  app.py  mcp.json  pyproject.toml  server.py
agents/mcp/: amazon_fresh.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: Chat.tsx  ThemeProvider.tsx
frontend/src/theme/: theme.ts
